cmake_minimum_required(VERSION 3.12)
project(TPBSearch C)
# For older secondary systems like Core 2 Duo, use C11; primary uses C23
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
# Universal release flags
set(UNIVERSAL_FLAGS "-O3 -funroll-loops -fomit-frame-pointer")
# Platform-specific flags
if(WIN32)
    if(NOT MSVC)
        set(CMAKE_C_FLAGS_RELEASE "${UNIVERSAL_FLAGS} -march=native")
        set(CMAKE_C_FLAGS_DEBUG "${UNIVERSAL_FLAGS} -march=native")
    endif()
    # Only add LTCG for MSVC, not for Clang
    if(MSVC)
        set(CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE} /LTCG")
        set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} /MT")
        set(CMAKE_EXE_LINKER_FLAGS "/SUBSYSTEM:CONSOLE,6.01")
    endif()
else()
    if(UNIX AND NOT APPLE)
        set(CMAKE_C_FLAGS_RELEASE "${UNIVERSAL_FLAGS} -march=native -mtune=generic")
        set(CMAKE_C_FLAGS_DEBUG "${UNIVERSAL_FLAGS} -march=native")
    else()
        set(CMAKE_C_FLAGS_RELEASE "${UNIVERSAL_FLAGS}")
        set(CMAKE_C_FLAGS_DEBUG "${UNIVERSAL_FLAGS}")
    endif()
endif()
# Compiler-specific flags
if(CMAKE_C_COMPILER_ID STREQUAL "GNU")
    if(NOT WIN32)
        set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -flto=auto -ffat-lto-objects")
        set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -flto=auto")
    endif()
elseif(CMAKE_C_COMPILER_ID MATCHES "Clang" OR CMAKE_C_COMPILER_ID STREQUAL "AppleClang")
    set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -flto=thin -Wno-gcc-compat")
    set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -flto=thin -Wno-gcc-compat")
endif()
# MSVC specific flags
if(MSVC)
    set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} /GL /arch:AVX2")
    set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} /arch:AVX2")
endif()
# PGO support
option(PGO_GENERATE "Enable PGO instrumentation" OFF)
option(PGO_USE "Enable PGO optimization" OFF)
set(PGO_GEN_FLAG "")
set(PGO_USE_FLAG "")
if(CMAKE_C_COMPILER_ID STREQUAL "GNU")
    set(PGO_GEN_FLAG "-fprofile-generate")
    set(PGO_USE_FLAG "-fprofile-use -fprofile-correction")
elseif(CMAKE_C_COMPILER_ID MATCHES "Clang" OR CMAKE_C_COMPILER_ID STREQUAL "AppleClang")
    set(PGO_GEN_FLAG "-fprofile-instr-generate")
    set(PGO_USE_FLAG "-fprofile-instr-use=default.profdata")
elseif(MSVC)
    set(PGO_GEN_FLAG "/LTCG /GENPROFILE")
    set(PGO_USE_FLAG "/LTCG /USEPROFILE")
endif()
if(PGO_GENERATE)
    set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} ${PGO_GEN_FLAG}")
endif()
# Cross-compilation support - Example toolchain usage (users provide actual toolchains)
# For ARM64 Linux: set(CMAKE_TOOLCHAIN_FILE "${CMAKE_SOURCE_DIR}/toolchains/aarch64-linux-gnu.cmake")
# Similar for ARM32, PowerPC, RISC-V, Windows ARM, FreeBSD, etc.
# Assume host build by default, cross via cmdline -DCMAKE_TOOLCHAIN_FILE=...
if(APPLE)
    if(NOT CMAKE_CROSSCOMPILING)
        set(CMAKE_OSX_DEPLOYMENT_TARGET "10.9")
        set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -mmacosx-version-min=10.9 -Wno-deprecated-declarations")
        set(CMAKE_OSX_ARCHITECTURES "x86_64;arm64")
    endif()
endif()
if(CMAKE_SYSTEM_NAME STREQUAL "FreeBSD")
    # Link against libthr instead of pthread if needed
endif()
# CMake options for specific builds
option(BUILD_FOR_WINDOWS_ARM "Build for Windows on ARM" OFF)
if(BUILD_FOR_WINDOWS_ARM)
    # Assume toolchain set, e.g., vcpkg triplet arm64-windows
endif()
option(BUILD_32BIT_TARGETS "Build 32-bit targets" OFF)
# Set architecture-specific flags
if(CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64|AMD64")
    set(ARCH_FLAGS "-march=x86-64")
elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "x86|i686")
    set(ARCH_FLAGS "-march=i686")
elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64|arm64")
    set(ARCH_FLAGS "-march=armv8-a")
elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "arm")
    set(ARCH_FLAGS "-march=armv7-a")
elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "ppc64*")
    set(ARCH_FLAGS "-mcpu=native")
elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "riscv64")
    set(ARCH_FLAGS "-march=rv64gc")
endif()
# Only add architecture flags for non-Windows or non-MSVC builds
if(NOT WIN32 OR NOT MSVC)
    set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} ${ARCH_FLAGS}")
    set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} ${ARCH_FLAGS}")
endif()
# Set build type
if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE "Release")
endif()
find_package(OpenSSL REQUIRED)
# Primary target for Core Ultra 5 245KF on Windows 11 64-bit
add_executable(TPBSearch_primary main.c)
if(NOT MSVC)
    set_target_properties(TPBSearch_primary PROPERTIES COMPILE_FLAGS "-march=meteorlake")
endif()
set(UNIVERSAL_FLAGS_PRIMARY "-O3 -funroll-loops -fomit-frame-pointer")
if(NOT MSVC)
    target_compile_options(TPBSearch_primary PRIVATE ${UNIVERSAL_FLAGS_PRIMARY})
endif()
# PGO for primary
if(PGO_USE)
    target_compile_options(TPBSearch_primary PRIVATE ${PGO_USE_FLAG})
endif()
# Cross-compilation support
if(WIN32)
    target_link_libraries(TPBSearch_primary PRIVATE ws2_32 mswsock secur32 shlwapi OpenSSL::SSL OpenSSL::Crypto)
    if(MSVC)
        target_link_options(TPBSearch_primary PRIVATE /LTCG)
    endif()
endif()
if(NOT WIN32)
    if(APPLE)
    else()
        target_link_libraries(TPBSearch_primary PRIVATE pthread OpenSSL::SSL OpenSSL::Crypto)
    endif()
endif()
if(WIN32)
    target_compile_definitions(TPBSearch_primary PRIVATE _WIN32 _WIN32_WINNT=0x0601)
    if(CMAKE_SIZEOF_VOID_P EQUAL 8)
        target_compile_definitions(TPBSearch_primary PRIVATE _WIN64)
    endif()
endif()
# Add multiple build targets for different architectures
add_executable(TPBSearch main.c)
if(WIN32)
    target_compile_definitions(TPBSearch PRIVATE _WIN32 _WIN32_WINNT=0x0601)
    if(CMAKE_SIZEOF_VOID_P EQUAL 8)
        target_compile_definitions(TPBSearch PRIVATE _WIN64)
    endif()
endif()
if(CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64|AMD64")
    set(X86_ARCHS "core2" "nehalem" "sandybridge" "haswell" "skylake" "meteorlake") # core2 for Core 2
    foreach(ARCH ${X86_ARCHS})
        add_executable(TPBSearch_${ARCH} main.c)
        if(NOT MSVC)
            set_target_properties(TPBSearch_${ARCH} PROPERTIES COMPILE_FLAGS "-march=${ARCH}")
        endif()
        if(${ARCH} STREQUAL "core2")
            set_property(TARGET TPBSearch_${ARCH} PROPERTY C_STANDARD 11)
        endif()
        if(PGO_USE)
            target_compile_options(TPBSearch_${ARCH} PRIVATE ${PGO_USE_FLAG})
        endif()
        if(WIN32)
            target_link_libraries(TPBSearch_${ARCH} PRIVATE ws2_32 mswsock secur32 shlwapi OpenSSL::SSL OpenSSL::Crypto)
            target_compile_definitions(TPBSearch_${ARCH} PRIVATE _WIN32 _WIN32_WINNT=0x0601)
            if(CMAKE_SIZEOF_VOID_P EQUAL 8)
                target_compile_definitions(TPBSearch_${ARCH} PRIVATE _WIN64)
            endif()
        else()
            if(APPLE)
            else()
                target_link_libraries(TPBSearch_${ARCH} PRIVATE pthread OpenSSL::SSL OpenSSL::Crypto)
            endif()
        endif()
    endforeach()
    if(BUILD_32BIT_TARGETS)
        # For 32-bit x86
        add_executable(TPBSearch_i686 main.c)
        if(NOT MSVC)
            set_target_properties(TPBSearch_i686 PROPERTIES COMPILE_FLAGS "-m32 -march=core2" LINK_FLAGS "-m32")
        endif()
        set_property(TARGET TPBSearch_i686 PROPERTY C_STANDARD 11)
        if(PGO_USE)
            target_compile_options(TPBSearch_i686 PRIVATE ${PGO_USE_FLAG})
        endif()
        if(WIN32)
            target_link_libraries(TPBSearch_i686 PRIVATE ws2_32 mswsock secur32 shlwapi OpenSSL::SSL OpenSSL::Crypto)
            target_compile_definitions(TPBSearch_i686 PRIVATE _WIN32 _WIN32_WINNT=0x0601)
        else()
            if(APPLE)
            else()
                target_link_libraries(TPBSearch_i686 PRIVATE pthread OpenSSL::SSL OpenSSL::Crypto)
            endif()
        endif()
    endif()
elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "ppc64*")
    set(POWER_ARCHS "power7" "power8" "power9")
    foreach(ARCH ${POWER_ARCHS})
        add_executable(TPBSearch_${ARCH} main.c)
        set(VECTOR_FLAGS "")
        if(${ARCH} STREQUAL "power7")
            set(VECTOR_FLAGS "-maltivec")
        elseif(${ARCH} STREQUAL "power8")
            set(VECTOR_FLAGS "-maltivec -mpower8-vector")
        elseif(${ARCH} STREQUAL "power9")
            set(VECTOR_FLAGS "-maltivec -mpower8-vector -mpower9-vector")
        endif()
        if(NOT MSVC)
            set_target_properties(TPBSearch_${ARCH} PROPERTIES COMPILE_FLAGS "-mcpu=${ARCH} -mtune=${ARCH} ${VECTOR_FLAGS}")
        endif()
        if(PGO_USE)
            target_compile_options(TPBSearch_${ARCH} PRIVATE ${PGO_USE_FLAG})
        endif()
        if(APPLE)
        else()
            target_link_libraries(TPBSearch_${ARCH} PRIVATE pthread OpenSSL::SSL OpenSSL::Crypto)
        endif()
    endforeach()
elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "riscv64")
    set(RISCV_ARCHS "rv64gc" "rv64gcv")
    foreach(ARCH ${RISCV_ARCHS})
        add_executable(TPBSearch_${ARCH} main.c)
        if(NOT MSVC)
            set_target_properties(TPBSearch_${ARCH} PROPERTIES COMPILE_FLAGS "-march=${ARCH}")
        endif()
        if(PGO_USE)
            target_compile_options(TPBSearch_${ARCH} PRIVATE ${PGO_USE_FLAG})
        endif()
        if(APPLE)
        else()
            target_link_libraries(TPBSearch_${ARCH} PRIVATE pthread OpenSSL::SSL OpenSSL::Crypto)
        endif()
    endforeach()
elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64|arm64")
    add_executable(TPBSearch_armv8 main.c)
    if(NOT MSVC)
        set_target_properties(TPBSearch_armv8 PROPERTIES COMPILE_FLAGS "-march=armv8-a")
    endif()
    if(PGO_USE)
        target_compile_options(TPBSearch_armv8 PRIVATE ${PGO_USE_FLAG})
    endif()
    if(APPLE)
    else()
        target_link_libraries(TPBSearch_armv8 PRIVATE pthread OpenSSL::SSL OpenSSL::Crypto)
    endif()
    if(BUILD_32BIT_TARGETS)
        # 32-bit ARM if cross
        add_executable(TPBSearch_armv7_32 main.c)
        if(NOT MSVC)
            set_target_properties(TPBSearch_armv7_32 PROPERTIES COMPILE_FLAGS "-march=armv7-a -mfpu=neon")
        endif()
        if(PGO_USE)
            target_compile_options(TPBSearch_armv7_32 PRIVATE ${PGO_USE_FLAG})
        endif()
        if(APPLE)
        else()
            target_link_libraries(TPBSearch_armv7_32 PRIVATE pthread OpenSSL::SSL OpenSSL::Crypto)
        endif()
    endif()
elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "arm")
    add_executable(TPBSearch_armv7 main.c)
    if(NOT MSVC)
        set_target_properties(TPBSearch_armv7 PROPERTIES COMPILE_FLAGS "-march=armv7-a -mfpu=neon")
    endif()
    if(PGO_USE)
        target_compile_options(TPBSearch_armv7 PRIVATE ${PGO_USE_FLAG})
    endif()
    if(APPLE)
    else()
        target_link_libraries(TPBSearch_armv7 PRIVATE pthread OpenSSL::SSL OpenSSL::Crypto)
    endif()
endif()
if(BUILD_FOR_WINDOWS_ARM)
    add_executable(TPBSearch_woa main.c)
    if(NOT MSVC)
        set_target_properties(TPBSearch_woa PROPERTIES COMPILE_FLAGS "-march=armv8-a")
    endif()
    if(PGO_USE)
        target_compile_options(TPBSearch_woa PRIVATE ${PGO_USE_FLAG})
    endif()
    target_link_libraries(TPBSearch_woa PRIVATE ws2_32 mswsock secur32 shlwapi OpenSSL::SSL OpenSSL::Crypto)
    target_compile_definitions(TPBSearch_woa PRIVATE _WIN32 _WIN32_WINNT=0x0601)
    if(CMAKE_SIZEOF_VOID_P EQUAL 8)
        target_compile_definitions(TPBSearch_woa PRIVATE _WIN64)
    endif()
endif()
# Platform-specific linking for default target
if(WIN32)
    target_link_libraries(TPBSearch PRIVATE ws2_32 mswsock secur32 shlwapi OpenSSL::SSL OpenSSL::Crypto)
else()
    if(CMAKE_SYSTEM_NAME STREQUAL "FreeBSD")
        if(APPLE)
        else()
            target_link_libraries(TPBSearch PRIVATE thr OpenSSL::SSL OpenSSL::Crypto)
        endif()
    else()
        if(APPLE)
        else()
            target_link_libraries(TPBSearch PRIVATE pthread OpenSSL::SSL OpenSSL::Crypto)
        endif()
    endif()
endif()
# Strip executable in release builds
if(NOT DEFINED CMAKE_STRIP)
    message(WARNING "CMAKE_STRIP not defined")
else()
    if(CMAKE_BUILD_TYPE STREQUAL "Release")
        add_custom_command(TARGET TPBSearch
                POST_BUILD
                COMMAND ${CMAKE_STRIP} --strip-unneeded $<TARGET_FILE:TPBSearch>
        )
    endif()
endif()
# Set CMAKE_POSITION_INDEPENDENT_CODE for shared libraries if needed
set(CMAKE_POSITION_INDEPENDENT_CODE OFF)
